--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,27 +3,18 @@ name: Python application test
 on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
-    services:
-      app:
-        image: docker://docker.io/library/python:3.7.6-buster
-        options: --workdir /pytest_project
-        volumes:
-          - .:/pytest_project
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Build the Docker container
-      run: docker build -t python-test-app .
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
 
-    - name: Install Dependencies
-      run: docker run python-test-app pip install -r /pytest_project/test-requirements.txt
-
-    # - name: Run pytest
-    #   run: docker run python-test-app pytest
-
-    - name: Run pytest alan
-      run: docker run python-test-app pytest /pytest_project/tests/chp2/video2
+    - name: Build and run tests
+      run: |
+        docker-compose up --build -d
+        docker-compose run test pytest
